# MdOS-tools

./: .clangd  CMakeLists.txt  invalid_test.cfg  readme.md  valid_test.cfg
cmake/: filters.cmake
common/include/: types.hpp  uuid.hpp
common/src/: uuid.cpp
mkbootcfg/include/: back.hpp  crc32.hpp  front.hpp  readme.txt  types.hpp
mkbootcfg/src/: back.cpp  crc32.cpp  front.cpp  mkbootcfg.cpp  uuid.cpp
mkcfg/: mkcfg.md
mkcfg/include/: back.hpp  front.hpp
mkcfg/src/: back.cpp  front.cpp  mkcfg.cpp
ppc/src/: ppc.cpp
verifycfg/src/: verifycfg.cpp
